BEP 7: DB setup, readme update, add data mapper

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,6 @@ packages/post/dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Databse configuration
+packages/user/ormconfig.json
