BEP 26: forgot, verify, and reset password APIs | aws ses implementation

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-DB_TYPE:
-DB_HOST:
-DB_PORT:
-DB_USERNAME:
-DB_PASSWORD:
-DB_NAME:
+APP_NAME=Bepositive
+SES_ACCESS_KEY=
+SES_SECRET_KEY=
+EMAIL_DEFAULT_SENDER=
