--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
    "scripts": {
       "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
       "build": "tsc",
-      "start": "npm run prebuild && npm run build && node .",
+      "start": "cross-env NODE_ENV=local npm run prebuild && npm run build && node .",
       "test": "jest"
    },
    "keywords": [],
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "aws-sdk": "^2.971.0",
+      "cross-env": "^7.0.3",
       "dotenv": "^10.0.0",
       "express": "^4.17.1",
+      "express-validator": "^6.12.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
       "typedi": "^0.10.0",
@@ -25,10 +28,11 @@
       "@types/jest": "^26.0.24",
       "@types/node": "^8.0.29",
       "jest": "^27.0.6",
+      "kill-port": "^1.6.1",
+      "swagger-jsdoc": "^6.1.0",
       "ts-jest": "^27.0.3",
       "ts-node": "3.3.0",
       "tslint": "^6.1.3",
-      "typescript": "^4.3.5",
-      "kill-port": "^1.6.1"
+      "typescript": "^4.3.5"
    }
 }
