BEP-32: elasticbeanstalk configuration should be ignored in git

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,7 @@ dist
 
 # Databse configuration
 ormconfig.json
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
