BEP-33: user signup through AWS Cognito

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-APP_NAME=Bepositive
+NODE_ENV=
+PORT=
+APP_NAME=
 SES_ACCESS_KEY=
 SES_SECRET_KEY=
 EMAIL_DEFAULT_SENDER=
+COGNITO_POOL_ID=
+COGNITO_APP_CLIENT_ID=
