--- a/package.json
+++ b/package.json
@@ -2,42 +2,44 @@
    "name": "bepositive-api",
    "version": "1.0.0",
    "description": "",
-   "main": "./dist/index.js",
+   "main": "index.ts",
    "engines": {
       "node": ">=14.17.3"
    },
    "scripts": {
       "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
       "build": "npm run prebuild && tsc",
-      "start": "node .",
+      "start": "npm run build && ts-node .",
       "test": "jest"
    },
    "keywords": [],
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "@types/express": "^4.17.13",
+      "@types/jest": "^26.0.24",
+      "@types/node": "^8.0.29",
+      "amazon-cognito-identity-js": "^5.1.0",
       "aws-sdk": "^2.971.0",
       "cross-env": "^7.0.3",
       "dotenv": "^10.0.0",
       "express": "^4.17.1",
       "express-jwt": "^6.1.0",
       "express-validator": "^6.12.1",
+      "jest": "^27.0.6",
       "jwks-rsa": "^2.0.4",
+      "kill-port": "^1.6.1",
+      "node-fetch": "^3.0.0",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
       "request": "^2.88.2",
-      "typedi": "^0.10.0",
-      "typeorm": "0.2.34",
-      "winston": "^3.3.3",
-      "typescript": "^4.3.5",
-      "@types/express": "^4.17.13",
-      "@types/jest": "^26.0.24",
-      "@types/node": "^8.0.29",
-      "jest": "^27.0.6",
-      "kill-port": "^1.6.1",
       "swagger-jsdoc": "^6.1.0",
       "ts-jest": "^27.0.3",
       "ts-node": "3.3.0",
-      "tslint": "^6.1.3"
+      "tslint": "^6.1.3",
+      "typedi": "^0.10.0",
+      "typeorm": "0.2.34",
+      "typescript": "^4.3.5",
+      "winston": "^3.3.3"
    }
 }
