BEP: point the set_ormconfig command to bpdev

--- a/.ebextensions/source_compile.config
+++ b/.ebextensions/source_compile.config
@@ -1,6 +1,6 @@
 #source_compile.config
 container_commands:
   set_ormconfig:
-    command: "/bin/aws s3 cp s3://bpstaging-env/ormconfig.json ormconfig.json"
+    command: "/bin/aws s3 cp s3://bpdev-env/ormconfig.json ormconfig.json"
   set_ormconfig_ownership:
     command: "/bin/chown webapp:webapp ormconfig.json"
