--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,5 +11,6 @@ phases:
       - npm run test
   post_build:
     commands:
+      - eb init
       - eb setenv NODE_ENV=development PORT=80 APP_NAME=BepositiveDev SES_ACCESS_KEY=AKIAY5YQZUVFFHAWTWTQ SES_SECRET_KEY=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 EMAIL_DEFAULT_SENDER=no-reply@devmail-bepositive.email COGNITO_POOL_ID=ap-southeast-2_3SkjIt0tJ COGNITO_APP_CLIENT_ID=test
       - aws s3 cp s3://bpdev-env/ormconfig.json ormconfig.json
