--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,6 @@ version: 0.2
 phases:
   install:
     commands:
-      - aws configure set aws_access_key_id AKIAY5YQZUVFC7ACDUW6; aws configure set aws_secret_access_key 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; aws configure set default.region ap-southeast-2
       - npm i npm@latest -g
       - npm install
   build:
@@ -11,6 +10,8 @@ phases:
       - npm run test
   post_build:
     commands:
-      - eb init
+      - aws configure set aws_access_key_id AKIAY5YQZUVFC7ACDUW6; aws configure set aws_secret_access_key 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; aws configure set default.region ap-southeast-2
+      - aws configure list
+      - eb init -i
       - eb setenv NODE_ENV=development PORT=80 APP_NAME=BepositiveDev SES_ACCESS_KEY=AKIAY5YQZUVFFHAWTWTQ SES_SECRET_KEY=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 EMAIL_DEFAULT_SENDER=no-reply@devmail-bepositive.email COGNITO_POOL_ID=ap-southeast-2_3SkjIt0tJ COGNITO_APP_CLIENT_ID=test
       - aws s3 cp s3://bpdev-env/ormconfig.json ormconfig.json
