--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,10 +2,10 @@ version: 0.2
 phases:
   install:
     commands:
-      - sudo apt update
-      - sudo apt upgrade
-      - sudo apt install python3-setuptools
-      - sudo easy_install3 pip
+      - apt update
+      - apt upgrade
+      - apt install python3-setuptools
+      - easy_install3 pip
       - pip -V
       - pip install --upgrade --user awsebcli
       - eb --version
