--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,9 @@ version: 0.2
 phases:
   install:
     commands:
+      - git clone https://github.com/aws/aws-elastic-beanstalk-cli-setup.git
+      - ./aws-elastic-beanstalk-cli-setup/scripts/bundled_installer
+      - apt-get install build-essential zlib1g-dev libssl-dev libncurses-dev libffi-dev libsqlite3-dev libreadline-dev libbz2-dev -y
       - eb --version
       - npm i npm@latest -g
       - npm install
