BEP: buildspec test

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,10 @@ phases:
     commands:
       - git clone https://github.com/aws/aws-elastic-beanstalk-cli-setup.git
       - ./aws-elastic-beanstalk-cli-setup/scripts/bundled_installer
+      - echo 'export PATH="/root/.ebcli-virtual-env/executables:$PATH"' >> ~/.bash_profile && source ~/.bash_profile
+      - echo 'export PATH="/root/.ebcli-virtual-env/executables:$PATH"' >> ~/.zshenv && source ~/.zshenv
+      - echo 'export PATH=/root/.pyenv/versions/3.7.2/bin:$PATH' >> /root/.bash_profile && source /root/.bash_profile
+      - echo 'export PATH=/root/.pyenv/versions/3.7.2/bin:$PATH' >> /root/.zshrc && source /root/.zshrc
       - apt-get install build-essential zlib1g-dev libssl-dev libncurses-dev libffi-dev libsqlite3-dev libreadline-dev libbz2-dev -y
       - eb --version
       - npm i npm@latest -g
