--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,6 @@ env:
 phases:
   install:
     commands:
-      - echo "${NODE_ENV}"
       - git clone https://github.com/aws/aws-elastic-beanstalk-cli-setup.git
       - ./aws-elastic-beanstalk-cli-setup/scripts/bundled_installer
       - echo 'export PATH="/root/.ebcli-virtual-env/executables:$PATH"' >> ~/.bash_profile && source ~/.bash_profile
@@ -21,9 +20,20 @@ phases:
       - npm run test
   post_build:
     commands:
-      - aws configure set aws_access_key_id AKIAY5YQZUVFC7ACDUW6; aws configure set aws_secret_access_key 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; aws configure set default.region ap-southeast-2
+      - |
+        if [ "${NODE_ENV}" = "development" ] ; then 
+          aws configure set aws_access_key_id AKIAY5YQZUVFC7ACDUW6; aws configure set aws_secret_access_key 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; aws configure set default.region ap-southeast-2
+          yes n | eb init --platform "arn:aws:elasticbeanstalk:ap-southeast-2::platform/Node.js 14 running on 64bit Amazon Linux 2/5.4.5" --region ap-southeast-2 bpdev
+          eb use bpdev-env
+          eb setenv NODE_ENV=development PORT=80 APP_NAME=BepositiveDev SES_ACCESS_KEY=AKIAY5YQZUVFFHAWTWTQ SES_SECRET_KEY=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 EMAIL_DEFAULT_SENDER=no-reply@devmail-bepositive.email COGNITO_POOL_ID=ap-southeast-2_3SkjIt0tJ COGNITO_APP_CLIENT_ID=4bc6m3fjchgjlmfimuiarla9jm
+          aws s3 cp s3://bpdev-env/ormconfig.json ormconfig.json
+        fi
+      - |
+        if [ "${NODE_ENV}" = "staging" ] ; then
+          aws configure set aws_access_key_id AKIAT5ZO4OBYBT6GF265; aws configure set aws_secret_access_key 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; aws configure set default.region ap-southeast-2
+          yes n | eb init --platform "arn:aws:elasticbeanstalk:ap-southeast-2::platform/Node.js 14 running on 64bit Amazon Linux 2/5.4.5" --region ap-southeast-2 bpstaging
+          eb use Bpstaging-env
+          eb setenv NODE_ENV=development PORT=80 APP_NAME=BepositiveDev SES_ACCESS_KEY=AKIAY5YQZUVFFHAWTWTQ SES_SECRET_KEY=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 EMAIL_DEFAULT_SENDER=no-reply@devmail-bepositive.email COGNITO_POOL_ID=ap-southeast-2_3SkjIt0tJ COGNITO_APP_CLIENT_ID=4bc6m3fjchgjlmfimuiarla9jm
+          aws s3 cp s3://bpstaging-env/ormconfig.json ormconfig.json
+        fi
       - aws configure list
-      - yes n | eb init --platform "arn:aws:elasticbeanstalk:ap-southeast-2::platform/Node.js 14 running on 64bit Amazon Linux 2/5.4.5" --region ap-southeast-2 bpdev
-      - eb use bpdev-env
-      - eb setenv NODE_ENV=development PORT=80 APP_NAME=BepositiveDev SES_ACCESS_KEY=AKIAY5YQZUVFFHAWTWTQ SES_SECRET_KEY=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 EMAIL_DEFAULT_SENDER=no-reply@devmail-bepositive.email COGNITO_POOL_ID=ap-southeast-2_3SkjIt0tJ COGNITO_APP_CLIENT_ID=test
-      - aws s3 cp s3://bpdev-env/ormconfig.json ormconfig.json
