--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,18 +22,18 @@ phases:
     commands:
       - |
         if [ "${NODE_ENV}" = "development" ] ; then 
-          aws configure set aws_access_key_id AKIAY5YQZUVFC7ACDUW6; aws configure set aws_secret_access_key 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; aws configure set default.region ap-southeast-2
+          aws configure set aws_access_key_id ${AWS_ACCESS_KEY}; aws configure set aws_secret_access_key ${AWS_SECRET_KEY}; aws configure set default.region ${REGION}
           yes n | eb init --platform "arn:aws:elasticbeanstalk:ap-southeast-2::platform/Node.js 14 running on 64bit Amazon Linux 2/5.4.5" --region ap-southeast-2 bpdev
           eb use bpdev-env
-          eb setenv NODE_ENV=development PORT=80 APP_NAME=BepositiveDev SES_ACCESS_KEY=AKIAY5YQZUVFFHAWTWTQ SES_SECRET_KEY=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 EMAIL_DEFAULT_SENDER=no-reply@devmail-bepositive.email COGNITO_POOL_ID=ap-southeast-2_3SkjIt0tJ COGNITO_APP_CLIENT_ID=4bc6m3fjchgjlmfimuiarla9jm
+          eb setenv NODE_ENV=${NODE_ENV} PORT=${PORT} APP_NAME=${APP_NAME} SES_ACCESS_KEY=${SES_ACCESS_KEY} SES_SECRET_KEY=${SES_SECRET_KEY} EMAIL_DEFAULT_SENDER=${EMAIL_DEFAULT_SENDER} COGNITO_POOL_ID=${COGNITO_POOL_ID} COGNITO_APP_CLIENT_ID=${COGNITO_APP_CLIENT_ID}
           aws s3 cp s3://bpdev-env/ormconfig.json ormconfig.json
         fi
       - |
         if [ "${NODE_ENV}" = "staging" ] ; then
-          aws configure set aws_access_key_id AKIAT5ZO4OBYBT6GF265; aws configure set aws_secret_access_key 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; aws configure set default.region ap-southeast-2
+          aws configure set aws_access_key_id ${AWS_ACCESS_KEY}; aws configure set aws_secret_access_key ${AWS_SECRET_KEY}; aws configure set default.region ${REGION}
           yes n | eb init --platform "arn:aws:elasticbeanstalk:ap-southeast-2::platform/Node.js 14 running on 64bit Amazon Linux 2/5.4.5" --region ap-southeast-2 bpstaging
           eb use Bpstaging-env
-          eb setenv NODE_ENV=development PORT=80 APP_NAME=BepositiveDev SES_ACCESS_KEY=AKIAY5YQZUVFFHAWTWTQ SES_SECRET_KEY=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 EMAIL_DEFAULT_SENDER=no-reply@devmail-bepositive.email COGNITO_POOL_ID=ap-southeast-2_3SkjIt0tJ COGNITO_APP_CLIENT_ID=4bc6m3fjchgjlmfimuiarla9jm
+          eb setenv NODE_ENV=${NODE_ENV} PORT=${PORT} APP_NAME=${APP_NAME} SES_ACCESS_KEY=${SES_ACCESS_KEY} SES_SECRET_KEY=${SES_SECRET_KEY} EMAIL_DEFAULT_SENDER=${EMAIL_DEFAULT_SENDER} COGNITO_POOL_ID=${COGNITO_POOL_ID} COGNITO_APP_CLIENT_ID=${COGNITO_APP_CLIENT_ID}
           aws s3 cp s3://bpstaging-env/ormconfig.json ormconfig.json
         fi
       - aws configure list
