BEP: To make env variable names more precise & to convert ormconfig.json to ormconfig.js

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,20 @@
 NODE_ENV=
-PORT=
+
+# APP
+APP_PORT=
 APP_NAME=
-SES_ACCESS_KEY=
-SES_SECRET_KEY=
+
 EMAIL_DEFAULT_SENDER=
-COGNITO_POOL_ID=
-COGNITO_APP_CLIENT_ID=
+
+# AWS
+AWS_SES_ACCESS_KEY=
+AWS_SES_SECRET_KEY=
+AWS_COGNITO_POOL_ID=
+AWS_COGNITO_APP_CLIENT_ID=
+
+# POSTGRESQL
+POSTGRES_HOST=127.0.0.1
+POSTGRES_PORT=5432
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=admin
+POSTGRES_DATABASE=bepositive_db
