--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
    "name": "bepositive-api",
    "version": "1.0.0",
    "description": "",
-   "main": "index.ts",
+   "main": "./dist/index.js",
    "engines": {
       "node": ">=14.17.3"
    },
    "scripts": {
       "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
       "build": "npm run prebuild && tsc",
-      "start": "ts-node .",
+      "start": "node .",
       "test": "jest"
    },
    "keywords": [],
@@ -17,13 +17,16 @@
    "license": "ISC",
    "dependencies": {
       "@types/express": "^4.17.13",
+      "@types/express-session": "^1.17.4",
       "@types/jest": "^26.0.24",
       "@types/node": "^8.0.29",
       "amazon-cognito-identity-js": "^5.1.0",
       "aws-sdk": "^2.971.0",
+      "cognito-express": "^2.0.19",
       "cross-env": "^7.0.3",
       "dotenv": "^10.0.0",
       "express": "^4.17.1",
+      "express-session": "^1.17.2",
       "express-validator": "^6.12.1",
       "jest": "^27.0.6",
       "kill-port": "^1.6.1",
