--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ AWS_SES_ACCESS_KEY=
 AWS_SES_SECRET_KEY=
 AWS_COGNITO_POOL_ID=
 AWS_COGNITO_APP_CLIENT_ID=
+AWS_REGION=
 
 # POSTGRESQL
 POSTGRES_HOST=127.0.0.1
