--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
    "name": "bepositive-api",
    "version": "1.0.0",
    "description": "",
-   "main": "./dist/index.js",
+   "main": "index.ts",
    "engines": {
       "node": ">=14.17.3"
    },
    "scripts": {
       "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
       "build": "npm run prebuild && tsc",
-      "start": "node .",
+      "start": "ts-node .",
       "test": "jest"
    },
    "keywords": [],
@@ -18,6 +18,7 @@
    "dependencies": {
       "@types/express": "^4.17.13",
       "@types/express-session": "^1.17.4",
+      "@types/geojson": "^7946.0.8",
       "@types/jest": "^26.0.24",
       "@types/node": "^8.0.29",
       "amazon-cognito-identity-js": "^5.1.0",
