Resolve BEP-11 "Web Service: Post/Upload image/Gallery"

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ AWS_SES_SECRET_KEY=
 AWS_COGNITO_POOL_ID=
 AWS_COGNITO_APP_CLIENT_ID=
 AWS_REGION=
+AWS_S3_BUCKET=
+AWS_S3_BUCKET_URL=
 
 # POSTGRESQL
 POSTGRES_HOST=127.0.0.1
