--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
       "@types/express-session": "^1.17.4",
       "@types/geojson": "^7946.0.8",
       "@types/jest": "^26.0.24",
+      "@types/mime": "^2.0.3",
+      "@types/multer": "^1.4.7",
       "@types/node": "^8.0.29",
       "amazon-cognito-identity-js": "^5.1.0",
       "aws-sdk": "^2.971.0",
@@ -31,6 +33,8 @@
       "express-validator": "^6.12.1",
       "jest": "^27.0.6",
       "kill-port": "^1.6.1",
+      "mime": "^2.5.2",
+      "multer": "^1.4.3",
       "node-fetch": "^3.0.0",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
@@ -42,6 +46,7 @@
       "typedi": "^0.10.0",
       "typeorm": "0.2.34",
       "typescript": "^4.3.5",
+      "uniqid": "^5.4.0",
       "winston": "^3.3.3"
    }
 }
