--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
   build:
     commands:
       - npm run build
-      - npm run test
+      - npm run test unit
   post_build:
     commands:
       - |
