--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
       - npm install
   build:
     commands:
-      - npm run build
+      #- npm run build
       - npm run test unit
   post_build:
     commands:
