--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "@googlemaps/google-maps-services-js": "^3.3.2",
       "@types/express": "^4.17.13",
       "@types/express-session": "^1.17.4",
       "@types/geojson": "^7946.0.8",
