--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,12 +5,13 @@ phases:
   install:
     commands:
       - git clone https://github.com/aws/aws-elastic-beanstalk-cli-setup.git
-      - ./aws-elastic-beanstalk-cli-setup/scripts
-      - echo 'export PATH="/root/.ebcli-virtual-env/executables:$PATH"' >> ~/.bash_profile && source ~/.bash_profile
-      - echo 'export PATH="/root/.ebcli-virtual-env/executables:$PATH"' >> ~/.zshenv && source ~/.zshenv
-      - echo 'export PATH=/root/.pyenv/versions/3.7.2/bin:$PATH' >> /root/.bash_profile && source /root/.bash_profile
-      - echo 'export PATH=/root/.pyenv/versions/3.7.2/bin:$PATH' >> /root/.zshrc && source /root/.zshrc
-      - apt-get install build-essential zlib1g-dev libssl-dev libncurses-dev libffi-dev libsqlite3-dev libreadline-dev libbz2-dev -y
+      - sudo apt update
+      - sudo apt install build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev curl
+      - tar -xf Python-3.?.?.tar.xz
+      - cd Python-3.*
+      - ./configure
+      - python --version
+      - python ./aws-elastic-beanstalk-cli-setup/scripts/ebcli_installer.py
       - eb --version
       - npm i npm@latest -g
       - npm install
