BEP: remove sudo command in buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,8 @@ phases:
   install:
     commands:
       - git clone https://github.com/aws/aws-elastic-beanstalk-cli-setup.git
-      - sudo apt update
-      - sudo apt install build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev curl
+      - apt update
+      - apt install build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev curl
       - tar -xf Python-3.?.?.tar.xz
       - cd Python-3.*
       - ./configure
