--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
       "build": "npm run prebuild && tsc",
       "start": "ts-node .",
       "dev": "nodemon ./index.ts -L",
-      "test": "jest"
+      "test": "jest",
+      "typeorm:migrate:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
+      "typeorm:migrate:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert"
    },
    "keywords": [],
    "author": "",
@@ -19,7 +21,6 @@
    "dependencies": {
       "@googlemaps/google-maps-services-js": "^3.3.2",
       "@types/express": "^4.17.13",
-      "@types/express-session": "^1.17.4",
       "@types/geojson": "^7946.0.8",
       "@types/jest": "^26.0.24",
       "@types/mime": "^2.0.3",
@@ -32,9 +33,9 @@
       "cross-env": "^7.0.3",
       "dotenv": "^10.0.0",
       "express": "^4.17.1",
-      "express-session": "^1.17.2",
       "express-validator": "^6.12.1",
       "jest": "^27.0.6",
+      "jwt-decode": "^3.1.2",
       "kill-port": "^1.6.1",
       "mime": "^2.5.2",
       "multer": "^1.4.3",
