add database migration in codebuild

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,8 @@ phases:
       - eb --version
       - npm i npm@latest -g
       - npm install
+      - npm run build
+      - npm run typeorm:migrate:run
   build:
     commands:
       #- npm run build
