change elastic beanstalk environment names

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,14 +26,14 @@ phases:
         if [ "${NODE_ENV}" = "development" ] ; then 
           aws configure set aws_access_key_id ${AWS_ACCESS_KEY}; aws configure set aws_secret_access_key ${AWS_SECRET_KEY}; aws configure set default.region ${AWS_REGION}
           yes n | eb init --platform "arn:aws:elasticbeanstalk:ap-southeast-2::platform/Node.js 14 running on 64bit Amazon Linux 2/5.4.10" --region ap-southeast-2 bpdev
-          eb use bpdev-env
+          eb use BPDevEnv
           eb setenv GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY} AWS_REGION=${AWS_REGION} AWS_S3_BUCKET_URL=${AWS_S3_BUCKET_URL} AWS_S3_BUCKET=${AWS_S3_BUCKET} NODE_ENV=${NODE_ENV} PORT=${PORT} APP_NAME=${APP_NAME} AWS_SES_ACCESS_KEY=${AWS_SES_ACCESS_KEY} AWS_SES_SECRET_KEY=${AWS_SES_SECRET_KEY} EMAIL_DEFAULT_SENDER=${EMAIL_DEFAULT_SENDER} AWS_COGNITO_POOL_ID=${AWS_COGNITO_POOL_ID} AWS_COGNITO_APP_CLIENT_ID=${AWS_COGNITO_APP_CLIENT_ID} POSTGRES_HOST=${POSTGRES_HOST} POSTGRES_PORT=${POSTGRES_PORT} POSTGRES_USERNAME=${POSTGRES_USERNAME} POSTGRES_PASSWORD=${POSTGRES_PASSWORD} POSTGRES_DATABASE=${POSTGRES_DATABASE}
         fi
       - |
         if [ "${NODE_ENV}" = "staging" ] ; then
           aws configure set aws_access_key_id ${AWS_ACCESS_KEY}; aws configure set aws_secret_access_key ${AWS_SECRET_KEY}; aws configure set default.region ${AWS_REGION}
           yes n | eb init --platform "arn:aws:elasticbeanstalk:ap-southeast-2::platform/Node.js 14 running on 64bit Amazon Linux 2/5.4.10" --region ap-southeast-2 bpstaging
-          eb use Bpstaging-env
+          eb use BPStagingEnv
           eb setenv GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY} AWS_REGION=${AWS_REGION} AWS_S3_BUCKET_URL=${AWS_S3_BUCKET_URL} AWS_S3_BUCKET=${AWS_S3_BUCKET} NODE_ENV=${NODE_ENV} PORT=${PORT} APP_NAME=${APP_NAME} AWS_SES_ACCESS_KEY=${AWS_SES_ACCESS_KEY} AWS_SES_SECRET_KEY=${AWS_SES_SECRET_KEY} EMAIL_DEFAULT_SENDER=${EMAIL_DEFAULT_SENDER} AWS_COGNITO_POOL_ID=${AWS_COGNITO_POOL_ID} AWS_COGNITO_APP_CLIENT_ID=${AWS_COGNITO_APP_CLIENT_ID} POSTGRES_HOST=${POSTGRES_HOST} POSTGRES_PORT=${POSTGRES_PORT} POSTGRES_USERNAME=${POSTGRES_USERNAME} POSTGRES_PASSWORD=${POSTGRES_PASSWORD} POSTGRES_DATABASE=${POSTGRES_DATABASE}
         fi
       - aws configure list
