--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
       "jwt-decode": "^3.1.2",
       "kill-port": "^1.6.1",
       "mime": "^2.5.2",
+      "moment": "^2.29.1",
       "multer": "^1.4.3",
       "node-fetch": "^3.0.0",
       "pg": "^8.4.0",
