--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
       "typeorm": "0.2.34",
       "typescript": "^4.5.4",
       "uniqid": "^5.4.0",
+      "uuid": "^8.3.2",
       "winston": "^3.3.3"
    },
    "devDependencies": {
