--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -30,6 +30,12 @@ jobs:
           sudo apt-get install python3-pip -y
           pip3 install awsebcli --upgrade
 
+      - name: Initialize Elastic Beanstalk
+        run: eb init -p node.js bepositive-app-dev --region ap-southeast-2
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
       - name: Deploy to Elastic Beanstalk
         run: eb deploy bepositive-app-dev-env --region ap-southeast-2
         env:
