--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -37,13 +37,13 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Set environment variables
-        run: eb setenv NODE_ENV=development PORT=3000 --region ap-southeast-2
+        run: eb setenv NODE_ENV=development PORT=3000 --region ap-southeast-2 --timeout 60
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           
       - name: Deploy to Elastic Beanstalk
-        run: eb deploy bepositive-app-dev-env --region ap-southeast-2
+        run: eb deploy bepositive-app-dev-env --region ap-southeast-2 --timeout 60
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
