--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -33,41 +33,41 @@ jobs:
       - name: Initialize Elastic Beanstalk
         run: eb init -p node.js bp-dev-app --region ap-southeast-2
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
 
       - name: Set environment variables
         run: eb setenv 
           NODE_ENV=development
           PORT=8081
           APP_NAME=BepositiveDev
-          AWS_COGNITO_APP_CLIENT_ID=79202gnuk299lkimt13jtlohh8
-          AWS_COGNITO_POOL_ID=ap-southeast-2_D3bJyRm1S
+          AWS_COGNITO_APP_CLIENT_ID=${{ secrets.DEV_AWS_COGNITO_APP_CLIENT_ID }}
+          AWS_COGNITO_POOL_ID=${{ secrets.DEV_AWS_COGNITO_POOL_ID }}
           AWS_REGION=ap-southeast-2
-          AWS_S3_BUCKET=bepositive-dev
-          AWS_S3_BUCKET_URL="https://bepositive-dev.s3.ap-southeast-2.amazonaws.com"
-          AWS_SES_ACCESS_KEY=AKIAY5YQZUVFLIY23X5M
-          AWS_SES_SECRET_KEY=BG7/1DhSPrtfQAioXyyFvrx+hBmK9V1ZGTOHJZaYKpw5
+          AWS_S3_BUCKET=${{ secrets.DEV_AWS_S3_BUCKET }}
+          AWS_S3_BUCKET_URL=${{ secrets.DEV_AWS_S3_BUCKET_URL }}
+          AWS_SES_ACCESS_KEY=${{ secrets.DEV_AWS_SES_ACCESS_KEY }}
+          AWS_SES_SECRET_KEY=${{ secrets.DEV_AWS_SES_SECRET_KEY }}
           EMAIL_DEFAULT_SENDER=no-reply@devmail-bepositive.email
-          GOOGLE_MAPS_API_KEY=AIzaSyBkBfxMJm2c_Zpwa5gx9lpAFRdWJVahSSk
-          POSTGRES_DATABASE=bepositive_db
-          POSTGRES_HOST="bp-dev-rds-instance-1.cyfmba7wz4ia.ap-southeast-2.rds.amazonaws.com"
-          POSTGRES_PASSWORD="q)Au9%DU"
-          POSTGRES_PORT=5432
-          POSTGRES_USERNAME=bpdev
+          GOOGLE_MAPS_API_KEY=${{ secrets.DEV_GOOGLE_MAPS_API_KEY }}
+          POSTGRES_DATABASE=${{ secrets.DEV_POSTGRES_DATABASE }}
+          POSTGRES_HOST=${{ secrets.DEV_POSTGRES_HOST }}
+          POSTGRES_PASSWORD=${{ secrets.DEV_POSTGRES_PASSWORD }}
+          POSTGRES_PORT=${{ secrets.DEV_POSTGRES_PORT }}
+          POSTGRES_USERNAME=${{ secrets.DEV_POSTGRES_USERNAME }}
           --region ap-southeast-2 --timeout 60
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
 
       - name: Test print
         run: ls
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
           
       - name: Deploy to Elastic Beanstalk
         run: eb deploy bp-dev-app-env-v1 --region ap-southeast-2 --timeout 60
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
