--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -3,7 +3,7 @@ name: Deploy to AWS Elastic Beanstalk (Dev Environment)
 on:
   push:
     branches:
-      - main
+      - dev
 
 jobs:
   deploy:
@@ -56,12 +56,6 @@ jobs:
           POSTGRES_PORT=${{ secrets.DEV_POSTGRES_PORT }}
           POSTGRES_USERNAME=${{ secrets.DEV_POSTGRES_USERNAME }}
           --region ap-southeast-2 --timeout 60
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
-
-      - name: Test print
-        run: ls
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
